--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -1,11 +1,15 @@
+$xtxColor: #27ba9b;
+$helpColor: #e26237;
+$sucColor: #1dc779;
+$warnColor: #ffb302;
+$priceColor: #cf4444;
 // 主题色
 $primary-color: #409eff !default;
 $success-color: #67c23a !default;
 $warning-color: #e6a23c !default;
 $danger-color: #f56c6c !default;
 $info-color: #909399 !default;
-$xtxColor: #27ba9b !default;
-$helpColor: #999 !default;
+
 // 文字颜色
 $text-color-primary: #303133 !default;
 $text-color-regular: #606266 !default;
